# Qingyu-Ai-Service

./: .env.example  .gitignore  PHASE1_COMPLETION_REPORT.md  PHASE2_EXECUTION_SUMMARY.md  PHASE2_INTERIM_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE5_AGENT_RUNTIME_SUMMARY.md  PROGRESS_SAVE.md  README.md  fix_all_imports.py  fix_imports.py  fix_imports2.py  langchain_upgrade_test_report.txt  langchain_versions.txt  pyproject.toml  requirements.txt  simple_grpc_test.py  test_entity_quick.py  test_grpc_components.py  test_grpc_startup.py  test_result.txt
.github/workflows/: notify-main.yml
.serena/: project.yml
.serena/memories/: ai-service-phase2-completion-report.md  ai-service-phase2-progress.md  ai-service-phase2-task-background.md  grpc-fix-completion-report.md  grpc-fix-task-background.md  grpc-fix-task-summary.md
docs/: http-api-test-guide.md  installation-guide.md  phase1-http-api-implementation-report.md
docs/api/: context.md  event-bus.md  executor.md  middleware.md  session-manager.md  vector-memory.md
docs/concepts/: architecture.md  event-system.md  lifecycle.md  middleware.md  multi-agent.md  session.md
docs/deployment/: docker.md  logging.md  monitoring.md  production.md
docs/getting-started/: installation.md  next-steps.md  quickstart.md
docs/guides/: error-handling.md  event-handling.md  middleware.md  performance.md  testing.md
docs/plans/: 2026-01-16-phase-6-testing-optimization.md  PHASE4_COMPLETION_REPORT.md
docs/reports/: phase-5-completion-report.md  phase-6-completion-report.md  phase-6-progress-summary.md  phase-6.1-completion-report.md  phase-6.4-documentation-progress.md  phase2-completion-report.md  phase2-execution-summary.md
docs/security/: auth.md  data-protection.md  input-validation.md  output-sanitization.md  overview.md  prompt-injection.md
examples/: vector_memory_demo.py
migrations/: create_quota_tables.sql
src/: main.py
src/agent_runtime/: __init__.py  callback_handler.py  factory.py  session_manager.py
src/agents/: __init__.py  base_agent.py  base_agent_v2.py
src/api/: chat.py  quota.py  writing.py
src/common/: __init__.py  utils.py  (+1 more)
tests/: conftest.py  test_character_agent.py  test_langchain_upgrade.py
(+191 files in other folders)
